--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.initialization-mode=always
+spring.r2dbc.url=r2dbc:h2:file:///./build/data/testdb;USER=sa;PASSWORD=password
+spring.rsocket.server.transport=websocket
+spring.rsocket.server.mapping-path=/rsocket
